tests/fixtures/invalid/divmod_bytes_bool.py
# Cannot call divmod() with Bytes, Bool
x = divmod(b"hello", True)
